--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "export NODE_OPTIONS=--openssl-legacy-provider && serve -s dist",
+    "start": "serve -s dist",
     "serve": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^4.5.0",
     "core-js": "^3.6.5",
+    "heroku": "^7.59.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "serve": "^11.3.2",
